--- a/script.ipynb
+++ b/script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,17 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "your name is he\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# INPUT FUNCTION\n",
     "name = input(\"Please insert your name \")\n",
@@ -106,17 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "less than 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# CONDITIONAL / SELECTION\n",
     "\n",
@@ -131,18 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your name is Husnul\n",
-      "You choose number 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# FUNCTION\n",
     "name = input(\"...TYPE YOUR NAME...\")\n",
@@ -159,18 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "START\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# How to run a main function\n",
     "def getANumber():\n",
@@ -189,21 +155,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# LOOPING \n",
     "for i in range (5): # For integer only\n",
@@ -212,20 +166,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "50.26548245743669"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "\n",
@@ -235,6 +178,383 @@
     "    area = pi * math.pow(radius,2)\n",
     "    return area\n",
     "CircleArea(pi, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# WHILE LOOP\n",
+    "\n",
+    "count = 0\n",
+    "\n",
+    "while (count < 5):\n",
+    "    print(count)\n",
+    "    count = count + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PYTHON KEYWORD\n",
+    "import keyword\n",
+    "\n",
+    "print(keyword.kwlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TRUE AND FALSE\n",
+    "print(False == 0)\n",
+    "print(False == -1)\n",
+    "print(True == 1)\n",
+    "print(True == 2)\n",
+    "\n",
+    "print(True+True)\n",
+    "print(False+False)\n",
+    "print(False+True)\n",
+    "\n",
+    "print(None == 1)\n",
+    "print(None == 0)\n",
+    "print(None == False)\n",
+    "print(None == [])\n",
+    "print(None == {})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AND, OR, NOT, IN, IS\n",
+    "\n",
+    "print(True or False)\n",
+    "print(True and False)\n",
+    "# or: This a logical operator in python. “or” Return the first True value.if not found return last. The truth table for “or” is depicted below. \n",
+    "# and: This a logical operator in python. “and” Return the first false value. If not found return last. The truth table for “and” is depicted below.\n",
+    "print(1 or 3 or 10 or 20)\n",
+    "print(10 or 3 or 1 or 2)\n",
+    "print(1 and 3 and 10 and 20)\n",
+    "print(10 and 3 and 1 and 2)\n",
+    "\n",
+    "# not: This logical operator inverts the truth value. The truth table for “not” is depicted below. \n",
+    "# in: This keyword is used to check if a container contains a value. This keyword is also used to loop through the container.\n",
+    "# is: This keyword is used to test object identity, i.e to check if both the objects take the same memory location or not.\n",
+    "\n",
+    "print (not 1 ==1)\n",
+    "print (not 1 !=1)\n",
+    "\n",
+    "print(\"s\" in \"husnul\")\n",
+    "print(\"s\" in \"HUSNUL\")\n",
+    "print(\"s\" in \"HUSNULS\")\n",
+    "print(\"s\" in \"HUSNULs\")\n",
+    "\n",
+    "print(\" \" is \" \") # will show warning\n",
+    "\n",
+    "print({} is {})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 \n",
+      "0 1 2 3 4 5 7 8 9 "
+     ]
+    }
+   ],
+   "source": [
+    "# FOR, WHILE, BREAK, CONTINUE\n",
+    "for i in range (10):\n",
+    "    print(i, end=\" \")\n",
+    "\n",
+    "    if (i == 6): break\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "c = 0\n",
+    "while c < 10:\n",
+    "    if c == 6:\n",
+    "        c += 1\n",
+    "        continue\n",
+    "    else:\n",
+    "        print(c, end=\" \")\n",
+    "        c += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# RETURN AND YIELD\n",
+    "\n",
+    "# yield is like return but used to return a generator\n",
+    "\n",
+    "def firstPrime():\n",
+    "    return 2\n",
+    "\n",
+    "print(firstPrime())\n",
+    "\n",
+    "def fun():\n",
+    "    S = 0\n",
+    "\n",
+    "    for i in range (10):\n",
+    "        S += 2\n",
+    "        yield S\n",
+    "\n",
+    "for i in fun():\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Husnul\n",
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "# CLASS\n",
+    "class Human:\n",
+    "    Name = \"Husnul\"\n",
+    "    Age = 23\n",
+    "\n",
+    "print(Human.Name)\n",
+    "print(Human.Age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "# AS\n",
+    "\n",
+    "import math as m\n",
+    "\n",
+    "print(m.pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 10\n",
+    "for i in range(n):\n",
+    "\t\n",
+    "# pass can be used as placeholder\n",
+    "# when code is to added later\n",
+    "\tpass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lambda keyword is used to make inline returning functions with no statements allowed internally. \n",
+    "\n",
+    "# Lambda keyword\n",
+    "g = lambda x: x*x*x\n",
+    "\n",
+    "print(g(7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "720\n",
+      "720\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import keyword\n",
+    "import math\n",
+    "print(math.factorial(6))\n",
+    "\n",
+    "# from keyword\n",
+    "from math import factorial\n",
+    "print(factorial(6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unable to divide by zero\n",
+      "always executed\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "divisor can not be zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[29], line 18\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[1;32m     16\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39malways executed\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 18\u001b[0m \u001b[39massert\u001b[39;00m b \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mdivisor can not be zero\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m#error thrower\u001b[39;00m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: divisor can not be zero"
+     ]
+    }
+   ],
+   "source": [
+    "# Exception Handling Keywords\n",
+    "\n",
+    "# try : This keyword is used for exception handling, used to catch the errors in the code using the keyword except. Code in “try” block is checked, if there is any type of error, except block is executed.\n",
+    "# except : As explained above, this works together with “try” to catch exceptions.\n",
+    "# finally : No matter what is result of the “try” block, block termed “finally” is always executed.\n",
+    "# raise: We can raise an exception explicitly with the raise keyword\n",
+    "# assert: This function is used for debugging purposes. Usually used to check the correctness of code. If a statement is evaluated to be true, nothing happens, but when it is false, “AssertionError” is raised. One can also print a message with the error, separated by a comma.\n",
+    "a = 5\n",
+    "b = 0\n",
+    "\n",
+    "try:\n",
+    "    print(a//b)\n",
+    "except:\n",
+    "    print(\"unable to divide by zero\")\n",
+    "finally:\n",
+    "    print(\"always executed\")\n",
+    "\n",
+    "assert b != 0, \"divisor can not be zero\" #error thrower\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "Hello\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'my_variable1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[30], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[39mdel\u001b[39;00m my_variable2\n\u001b[1;32m     15\u001b[0m \u001b[39m# check if my_variable1 and my_variable2 exists\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m \u001b[39mprint\u001b[39m(my_variable1)\n\u001b[1;32m     17\u001b[0m \u001b[39mprint\u001b[39m(my_variable2)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'my_variable1' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# del keyword\n",
+    "# del is used to delete a reference to an object. Any variable or list value can be deleted using del.\n",
+    "\n",
+    "my_variable1 = 20\n",
+    "my_variable2 = \"Hello\"\n",
+    "\n",
+    "# check if my_variable1 and my_variable2 exists\n",
+    "print(my_variable1)\n",
+    "print(my_variable2)\n",
+    "\n",
+    "# delete both the variables\n",
+    "del my_variable1\n",
+    "del my_variable2\n",
+    "\n",
+    "# check if my_variable1 and my_variable2 exists\n",
+    "print(my_variable1)\n",
+    "print(my_variable2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "no binding for nonlocal 'n1' found (2218835467.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[42], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    nonlocal n1\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m no binding for nonlocal 'n1' found\n"
+     ]
+    }
+   ],
+   "source": [
+    "# global and non local\n",
+    "n1 = 15\n",
+    "def add():\n",
+    "    n2 = 2\n",
+    "    global n1\n",
+    "    n1 = n1 + n2\n",
+    "    print(n1)\n",
+    "\n",
+    "print(n1)\n",
+    "add()"
    ]
   }
  ],
