--- a/script.ipynb
+++ b/script.ipynb
@@ -532,20 +532,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "no binding for nonlocal 'n1' found (2218835467.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[42], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    nonlocal n1\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m no binding for nonlocal 'n1' found\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "17\n"
      ]
     }
    ],
    "source": [
     "# global and non local\n",
+    "# global: This keyword is used to define a variable inside the function to be of a global scope.\n",
+    "# non-local : This keyword works similar to the global, but rather than global, this keyword declares a variable to point to variable of outside enclosing function, in case of nested functions.\n",
     "n1 = 15\n",
     "def add():\n",
     "    n2 = 2\n",
