--- a/script.ipynb
+++ b/script.ipynb
@@ -19,22 +19,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is also\\nfor multiline comment purpose'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# This a python comment"
+    "# This a python comment\n",
+    "\n",
+    "\"\"\"This is multiline comment in python\"\"\"\n",
+    "\n",
+    "'''This is also\n",
+    "for multiline comment purpose'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "money 3\n",
+      "23\n",
+      "23\n",
       "3\n",
       "4.6\n",
       "Hello This My Number\n"
@@ -45,13 +64,248 @@
     "# how to declare variables in python\n",
     "myNumber = 3\n",
     "\n",
+    "# multi declaration\n",
+    "a, b, c = \"husnul\", 23, ['aceh', 'bandung', 'jakarta']\n",
+    "\n",
+    "# change type\n",
+    "strb = str(b)\n",
+    "\n",
+    "# conditional operator\n",
+    "\n",
+    "money = 3 if 30 % 3 == 0 else 0\n",
+    "\n",
+    "print(\"money\", money)\n",
+    "\n",
+    "intstrb = int(strb)\n",
+    "\n",
+    "print(strb)\n",
+    "print(intstrb)\n",
+    "\n",
     "myNumber2 = 4.6\n",
     "\n",
     "print(myNumber)\n",
     "print(myNumber2)\n",
     "\n",
     "myNumber = \"Hello This My Number\"  # Change to diff data type\n",
-    "print(myNumber)\n"
+    "print(myNumber)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dffd\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Taking the input\n",
+    "\n",
+    "problem = input(\"tell us your problem\")\n",
+    "\n",
+    "print(problem)\n",
+    "print(type(problem)) # to check variable type\n",
+    "\n",
+    "# Python program showing\n",
+    "# a use of raw_input() in python 2\n",
+    "# g = raw_input(\"Enter your name : \")\n",
+    "# print g\n",
+    "\n",
+    "\n",
+    "# we also able to typecasting input\n",
+    "# to specific data type\n",
+    "# by default it typecasted to str (string)\n",
+    "amount = int(input())\n",
+    "amount = float(input())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dhjdhdbb\n",
+      "hdhdhd\n"
+     ]
+    }
+   ],
+   "source": [
+    "# taking multiple inputs\n",
+    "\n",
+    "# Using split() method :\n",
+    "boy, girl = input().split()\n",
+    "print(boy)\n",
+    "print(girl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4\n",
+      "1*2*3*4\n",
+      "1*2*3*4/end/\n",
+      "3>>>2>>>1>>>Start\n",
+      "3>>>2>>>1>>>Start\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Output using print() function\n",
+    "# print(value(s), sep= ' ', end = '\\n', file=file, flush=flush)\n",
+    "\n",
+    "a, b, c, d = 1, 2, 3, 4\n",
+    "\n",
+    "print(a,b,c,d, sep=\" \")\n",
+    "print(a,b,c,d, sep=\"*\")\n",
+    "print(a,b,c,d, sep=\"*\", end=\"/end/\")\n",
+    "print()\n",
+    "\n",
+    "# without flush\n",
+    "import time\n",
+    "\n",
+    "count_second2 = 3\n",
+    "for i in reversed(range(count_second2 + 1)):\n",
+    "\tif i > 0:\n",
+    "\t\tprint(i, end='>>>')\n",
+    "\t\ttime.sleep(1)\n",
+    "\telse:\n",
+    "\t\tprint('Start')\n",
+    "\n",
+    "# with flush\n",
+    "import time\n",
+    "\n",
+    "count_seconds = 3\n",
+    "for i in reversed(range(count_seconds + 1)):\n",
+    "\tif i == 3:\n",
+    "\t\ttime.sleep(1)\n",
+    "\tif i > 0:\n",
+    "\t\tprint(i, end='>>>', flush = True)\n",
+    "\t\ttime.sleep(1)\n",
+    "\telse:\n",
+    "\t\tprint('Start')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "geeks geeksforgeeks\n",
+      "1 2 3 4 1 2 3 4 5 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print without new line\n",
+    "\n",
+    "# Python 3 code for printing\n",
+    "# on the same line printing\n",
+    "# geeks and geeksforgeeks\n",
+    "# in the same line\n",
+    "\n",
+    "print(\"geeks\", end =\" \")\n",
+    "print(\"geeksforgeeks\")\n",
+    "\n",
+    "# array\n",
+    "a = [1, 2, 3, 4]\n",
+    "\n",
+    "# printing a element in same\n",
+    "# line\n",
+    "for i in range(4):\n",
+    "\tprint(a[i], end =\" \")\n",
+    "\n",
+    "# Print without newline in Python 3.x without using for loop\n",
+    "\n",
+    "l=[1,2,3,4,5,6]\n",
+    "\n",
+    "# using * symbol prints the list\n",
+    "# elements in a single line\n",
+    "print(*l)\n",
+    "\n",
+    "import antigravity # LOL must try"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Geeks : 1000, Portal : 5.33\n",
+      "Total students : 240, Boys : 120\n",
+      "    031\n",
+      " 3.561E+02\n",
+      "Center aligned string with fillchr: \n",
+      "##########I love geeksforgeeks##########\n",
+      "The left aligned string is : \n",
+      "I love geeksforgeeks--------------------\n",
+      "The right aligned string is : \n",
+      "--------------------I love geeksforgeeks\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Output Formatting\n",
+    "\n",
+    "# Python program showing how to use\n",
+    "# string modulo operator(%) to print\n",
+    "# fancier output\n",
+    "\n",
+    "# print integer and float value\n",
+    "print(\"Geeks : %2d, Portal : %0.2f\" % (1000, 5.333))\n",
+    "\n",
+    "# print integer value\n",
+    "print(\"Total students : %3d, Boys : %2d\" % (240, 120))\n",
+    "\n",
+    "# print octal value\n",
+    "print(\"%7.3o\" % (25))\n",
+    "\n",
+    "# print exponential value\n",
+    "print(\"%10.3E\" % (356.08977))\n",
+    "\n",
+    "# Python program to\n",
+    "# format a output using\n",
+    "# string() method\n",
+    "\n",
+    "cstr = \"I love geeksforgeeks\"\n",
+    "\n",
+    "# Printing the center aligned\n",
+    "# string with fillchr\n",
+    "print (\"Center aligned string with fillchr: \")\n",
+    "print (cstr.center(40, '#'))\n",
+    "\n",
+    "# Printing the left aligned\n",
+    "# string with \"-\" padding\n",
+    "print (\"The left aligned string is : \")\n",
+    "print (cstr.ljust(40, '-'))\n",
+    "\n",
+    "# Printing the right aligned string\n",
+    "# with \"-\" padding\n",
+    "print (\"The right aligned string is : \")\n",
+    "print (cstr.rjust(40, '-'))\n"
    ]
   },
   {
@@ -558,6 +812,56 @@
     "print(n1)\n",
     "add()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n",
+      "30\n",
+      "{45}\n",
+      "2   3   4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Declared using Continuation Character (\\):\n",
+    "s = 1 + 2 + 3 + \\\n",
+    "    4 + 5 + 6 + \\\n",
+    "    7 + 8 + 9\n",
+    "\n",
+    "# Declared using parentheses () :\n",
+    "n = (1 * 2 * 3 + 7 + 8 + 9)\n",
+    "\n",
+    "# Declared using square brackets [] :\n",
+    "footballer = ['MESSI',\n",
+    "          'NEYMAR',\n",
+    "          'SUAREZ']\n",
+    "\n",
+    "# Declared using braces {} :\n",
+    "x = {1 + 2 + 3 + 4 + 5 + 6 +\n",
+    "     7 + 8 + 9}\n",
+    "\n",
+    "# Declared using semicolons(;) :\n",
+    "flag = 2; ropes = 3; pole = 4\n",
+    "\n",
+    "print(s)\n",
+    "print(n)\n",
+    "print(x)\n",
+    "print(flag, \" \", ropes, \" \", pole)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
