--- a/script.ipynb
+++ b/script.ipynb
@@ -858,10 +858,473 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "add  13\n",
+      "sub  5\n",
+      "mul  36\n",
+      "div1  2.25\n",
+      "div2  2\n",
+      "mod  1\n",
+      "power  6561\n"
+     ]
+    }
+   ],
+   "source": [
+    "# operators in python\n",
+    "# Examples of Arithmetic Operator\n",
+    "a = 9\n",
+    "b = 4\n",
+    "\n",
+    "# Addition of numbers\n",
+    "add = a + b\n",
+    "\n",
+    "# Subtraction of numbers\n",
+    "sub = a - b\n",
+    "\n",
+    "# Multiplication of number\n",
+    "mul = a * b\n",
+    "\n",
+    "# Division(float) of number\n",
+    "div1 = a / b\n",
+    "\n",
+    "# Division(floor) of number\n",
+    "div2 = a // b\n",
+    "\n",
+    "# Modulo of both number\n",
+    "mod = a % b\n",
+    "\n",
+    "# Power\n",
+    "p = a ** b\n",
+    "\n",
+    "# print results\n",
+    "print(\"add \",add)\n",
+    "print(\"sub \",sub)\n",
+    "print(\"mul \",mul)\n",
+    "print(\"div1 \",div1)\n",
+    "print(\"div2 \",div2)\n",
+    "print(\"mod \",mod)\n",
+    "print(\"power \",p)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Examples of Relational Operators\n",
+    "a = 13\n",
+    "b = 33\n",
+    "\n",
+    "# a > b is False\n",
+    "print(a > b)\n",
+    "\n",
+    "# a < b is True\n",
+    "print(a < b)\n",
+    "\n",
+    "# a == b is False\n",
+    "print(a == b)\n",
+    "\n",
+    "# a != b is True\n",
+    "print(a != b)\n",
+    "\n",
+    "# a >= b is False\n",
+    "print(a >= b)\n",
+    "\n",
+    "# a <= b is True\n",
+    "print(a <= b)\n",
+    "\n",
+    "# a is not b is True\n",
+    "print(a is not b)\n",
+    "\n",
+    "# a is b is False\n",
+    "print(a is b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# logical operator\n",
+    "# Examples of Logical Operator\n",
+    "a = True\n",
+    "b = False\n",
+    "\n",
+    "# Print a and b is False\n",
+    "print(a and b)\n",
+    "\n",
+    "# Print a or b is True\n",
+    "print(a or b)\n",
+    "\n",
+    "# Print not a is False\n",
+    "print(not a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "14\n",
+      "-11\n",
+      "14\n",
+      "2\n",
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Examples of Bitwise operators\n",
+    "a = 10\n",
+    "b = 4\n",
+    "\n",
+    "# Print bitwise AND operation\n",
+    "print(a & b)\n",
+    "\n",
+    "# Print bitwise OR operation\n",
+    "print(a | b)\n",
+    "\n",
+    "# Print bitwise NOT operation\n",
+    "print(~a)\n",
+    "\n",
+    "# print bitwise XOR operation\n",
+    "print(a ^ b)\n",
+    "\n",
+    "# print bitwise right shift operation\n",
+    "print(a >> 2)\n",
+    "\n",
+    "# print bitwise left shift operation\n",
+    "print(a << 2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "10\n",
+      "100\n",
+      "102400\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Examples of Assignment Operators\n",
+    "a = 10\n",
+    "\n",
+    "# Assign value\n",
+    "b = a\n",
+    "print(b)\n",
+    "\n",
+    "# Add and assign value\n",
+    "b += a\n",
+    "print(b)\n",
+    "\n",
+    "# Subtract and assign value\n",
+    "b -= a\n",
+    "print(b)\n",
+    "\n",
+    "# multiply and assign\n",
+    "b *= a\n",
+    "print(b)\n",
+    "\n",
+    "# bitwise lishift operator\n",
+    "b <<= a\n",
+    "print(b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# identity operator\n",
+    "a = 10\n",
+    "b = 20\n",
+    "c = a\n",
+    "\n",
+    "print(a is not b)\n",
+    "print(a is c)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is NOT present in given list\n",
+      "y is present in given list\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python program to illustrate\n",
+    "# not 'in' operator\n",
+    "# or membership operator\n",
+    "x = 24\n",
+    "y = 20\n",
+    "list = [10, 20, 30, 40, 50]\n",
+    "\n",
+    "if (x not in list):\n",
+    "\tprint(\"x is NOT present in given list\")\n",
+    "else:\n",
+    "\tprint(\"x is present in given list\")\n",
+    "\n",
+    "if (y in list):\n",
+    "\tprint(\"y is present in given list\")\n",
+    "else:\n",
+    "\tprint(\"y is NOT present in given list\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "610\n",
+      "Hello! Welcome.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Examples of Operator Precedence\n",
+    "\n",
+    "# Precedence of '+' & '*'\n",
+    "expr = 10 + 20 * 30\n",
+    "print(expr)\n",
+    "\n",
+    "# Precedence of 'or' & 'and'\n",
+    "name = \"Alex\"\n",
+    "age = 0\n",
+    "\n",
+    "if name == \"Alex\" or name == \"John\" and age >= 2:\n",
+    "\tprint(\"Hello! Welcome.\") # this will be executed\n",
+    "else:\n",
+    "\tprint(\"Good Bye!!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.0\n",
+      "6\n",
+      "0\n",
+      "512\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Examples of Operator Associativity\n",
+    "\n",
+    "# Left-right associativity\n",
+    "# 100 / 10 * 10 is calculated as\n",
+    "# (100 / 10) * 10 and not\n",
+    "# as 100 / (10 * 10)\n",
+    "print(100 / 10 * 10)\n",
+    "\n",
+    "# Left-right associativity\n",
+    "# 5 - 2 + 3 is calculated as\n",
+    "# (5 - 2) + 3 and not\n",
+    "# as 5 - (2 + 3)\n",
+    "print(5 - 2 + 3)\n",
+    "\n",
+    "# left-right associativity\n",
+    "print(5 - (2 + 3))\n",
+    "\n",
+    "# right-left associativity\n",
+    "# 2 ** 3 ** 2 is calculated as\n",
+    "# 2 ** (3 ** 2) and not\n",
+    "# as (2 ** 3) ** 2\n",
+    "print(2 ** 3 ** 2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Program to demonstrate conditional operator\n",
+    "a, b = 10, 20\n",
+    "\n",
+    "# Copy value of a in min if a < b else copy b\n",
+    "min = a if a < b else b\n",
+    "\n",
+    "print(min)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "10\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python program to demonstrate ternary operator\n",
+    "a, b = 10, 20\n",
+    "\n",
+    "# Use tuple for selecting an item\n",
+    "# (if_test_false,if_test_true)[test]\n",
+    "# if [a<b] is true it return 1, so element with 1 index will print\n",
+    "# else if [a<b] is false it return 0, so element with 0 index will print\n",
+    "print( (b, a) [a < b] )\n",
+    "\n",
+    "# Use Dictionary for selecting an item\n",
+    "# if [a < b] is true then value of True key will print\n",
+    "# else if [a<b] is false then value of False key will print\n",
+    "print({True: a, False: b} [a < b])\n",
+    "\n",
+    "# lambda is more efficient than above two methods\n",
+    "# because in lambda we are assure that\n",
+    "# only one expression will be evaluated unlike in\n",
+    "# tuple and Dictionary\n",
+    "print((lambda: b, lambda: a)[a < b]())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b is greater than a\n",
+      "b is greater than a\n",
+      "7 is Greater\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python program to demonstrate nested ternary operator\n",
+    "a, b = 10, 20\n",
+    "\n",
+    "print (\"Both a and b are equal\" if a == b else \"a is greater than b\"\n",
+    "\t\tif a > b else \"b is greater than a\")\n",
+    "\n",
+    "# Python program to demonstrate nested ternary operator\n",
+    "a, b = 10, 20\n",
+    "\n",
+    "if a != b:\n",
+    "\tif a > b:\n",
+    "\t\tprint(\"a is greater than b\")\n",
+    "\telse:\n",
+    "\t\tprint(\"b is greater than a\")\n",
+    "else:\n",
+    "\tprint(\"Both a and b are equal\")\n",
+    "\n",
+    "a=5\n",
+    "b=7\n",
+    "\n",
+    "# [statement_on_True] if [condition] else [statement_on_false]\n",
+    "\n",
+    "print(a,\"is greater\") if (a>b) else print(b,\"is Greater\")\n",
+    "\n",
+    "'''When condition becomes true, expression [on_false]\n",
+    "   is not executed and value of \"True and [on_true]\"\n",
+    "   is returned.  Else value of \"False or [on_false]\"\n",
+    "   is returned.\n",
+    "   Note that \"True and x\" is equal to x. \n",
+    "   And \"False or x\" is equal to x. '''\n",
+    "\n",
+    "\t\n",
+    "# Program to demonstrate conditional operator\n",
+    "a, b = 10, 20\n",
+    "\n",
+    "# If a is less than b, then a is assigned\n",
+    "# else b is assigned (Note : it doesn't\n",
+    "# work if a is 0.\n",
+    "min = a < b and a or b\n",
+    "\n",
+    "print(min)\n"
+   ]
   }
  ],
  "metadata": {
